# worldbrief

./: .gitignore  DOCS.md  pyproject.toml  sources.json
data/: newspulse.db
newspulse/: classifier.py  db.py  fetcher.py  scheduler.py
newspulse/api/: main.py  routes.py
static/: app.js  style.css
templates/: index.html
