[project]
name = "newspulse"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.103.1",
    "apscheduler>=3.11.2",
    "fastapi>=0.136.1",
    "feedparser>=6.0.12",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.29",
    "uvicorn[standard]>=0.47.0",
]
